criação do detalhe e da home

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
-    "preserveWhitespaces": true
+    "preserveWhitespaces": true,
+    "fullTemplateTypeCheck": true,
+    "enableIvy": false,
+    "locale": "pt"
   }
 }
