--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "packaging": "jar"
   },
   "dependencies": {
-    "@angular/common": "17.0.6",
+    "@angular/common": "^17.0.6",
     "@angular/compiler": "17.0.6",
     "@angular/core": "17.0.6",
     "@angular/forms": "17.0.6",
@@ -79,7 +79,7 @@
     "@angular/router": "17.0.6",
     "@fortawesome/angular-fontawesome": "0.14.0",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
-    "@fortawesome/free-solid-svg-icons": "6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@ng-bootstrap/ng-bootstrap": "16.0.0",
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
